| Author: Jonathan Naumann                                               |
+------------------------------------------------------------------------+
|
| CHANGELOG
|
+



############################################################################################





Version 1.6
	- Version 1.6.0

Developer Version
	- 1.6.0 Development

Building Steps: 3435



 Version 1.6.0 Development
-----------------------------------------------------------------
 - bug #0000113: fixed problem showing text at detail-view in gallery using K2-theme
 - bug #0000122: 

 - security fixed: 

 - bug fixed: Knowledgebase category deleting bug.
 - bug fixed: Knowledgebase Drop-Down selection bug (if you are in a
              category and you want to create a new item, the category is not
              selected).
 - bug fixed: Knowledge relocate after saveing brings you now back to the
              selected category.
 - bug fixed: Notebook display on desktop now with overflow.
 - bug fixed: Register validation link comes without the lang variable.

 - changed: Complete rewrite of the product manager as a base for the upcoming
            toendaCMS shop system.
 - changed: __NO_SPAM__ changed into [at]
 - changed: Default content text in imagegallery removed
 - changed: Framework rewrite to workl well with PHP5
 - changed: Configuration now read by simple_xml parser from PHP5
 - changed: Global configuration values now saved in base64 for the xml configuration files.
 - changed: Minimal PHP version is now 5.2.0
 - changed: Updated MSSQL 2005 support
 - changed: Installer updated, now the installer can only update version 1.0.7 and
            version 1.5.6 to the current 1.6
 - changed: Changed the JavaScript function to fill the date fields in the edit mode
            of a news.
 - changed: All file relevate functions moved to the tcms_file object.

 - added: New SEO format available: instead of using the old url format
          [www.domain.com/index.php?id=frontpage&lang=en]